<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainScreen.interesting.NewsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wensd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/wensday_news"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/wensday_post"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/wensday_dance" />

            <TextView
                android:id="@+id/text_wens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:lineHeight="24sp"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                android:padding="10sp"
                android:text="@string/wensday_news_text"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center|start" />

            <ImageView
                android:id="@+id/gif_wensday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/wens_dance_g"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/rain_text"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_singin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:lineHeight="24sp"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                android:padding="10sp"
                android:text="@string/singin_in_the_rain"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center|start" />

            <ImageView
                android:id="@+id/gif_singin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/singin_in_the_rain_dancegif"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/pulp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/pulp_name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_pulp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:lineHeight="24sp"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                android:padding="10sp"
                android:text="@string/pulp_text"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center|start" />

            <ImageView
                android:id="@+id/gif_pulp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/pulp_fiction"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/jocker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/jocker_name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_jocker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:lineHeight="24sp"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                android:padding="10sp"
                android:text="@string/text_jocker_dance"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center|start" />

            <ImageView
                android:id="@+id/gif_jocker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/jocker_dance"
                android:adjustViewBounds="true"
                android:visibility="visible"
                android:scaleType="centerCrop"
                android:paddingBottom="10sp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>