<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Register.PreviewScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/gradient"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="341dp"
            android:layout_height="90dp"
            android:layout_margin="15dp"
            android:layout_weight="0"
            android:gravity="bottom|center"
            android:text="@string/typedance"
            android:textColor="@color/white"
            android:textSize="29sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.106" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="391dp"
            android:layout_height="543dp"
            android:layout_weight="1"
            android:gravity="bottom"
            app:srcCompat="@drawable/dance_ona"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button4"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:background="@drawable/grad_but"
            android:gravity="center"
            android:text="@string/begin"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.851" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="0"
            android:background="@null"
            android:backgroundTint="#FEFEFE"
            android:gravity="top|center"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>